--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
         .prob_circle{
             fill: darkred;
         }
+        .bottom_top {
+            position: fixed;
+            bottom: 1%;
+            right: 1%;
+            z-index: 99;
+        }
     </style>
 </head>
 <body>
@@ -107,6 +113,9 @@
     <button id="start_timer">Start</button>
     <button id="stop_timer">Stop</button>
     <button id="reset">Reset</button>
+</div>
+<div class="bottom_top">
+    Created by: <a href="https://twitter.com/bene2929">@bene2929</a>
 </div>
 </body>
 </html>
